# hexlet_flask_example

./: Makefile  pyproject.toml
hexlet_flask_example/: database.py  example.py  users.json
hexlet_flask_example/templates/users/: edit.html  form.html  index.html  login.html  new.html  show.html
