[tool.poetry]
name = "hexlet-flask-example"
version = "0.1.0"
description = ""
authors = ["Pavel Krivosheev <pkrivosheev@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
